.kube/deploy.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  namespace: ${NAMESPACE}
  labels:
    app: ${CI_PROJECT_NAME}-${CI_COMMIT_REF_SLUG}
  name: ${CI_PROJECT_NAME}-${CI_COMMIT_REF_SLUG}
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: ${CI_PROJECT_NAME}-${CI_COMMIT_REF_SLUG}
    spec:
      tolerations:
      - key: "dedicated"
        operator: "Equal"
        value: "${NODESELECTOR}"
        effect: "NoSchedule"
      containers:
        - name: ${CI_PROJECT_NAME}-${CI_COMMIT_REF_SLUG}
          image: "${REGISTRY}/app/${CI_PROJECT_NAME}:${DAPP_SLUG}"
          imagePullPolicy: Always
          command: ["sh"]
          args: ["/opt/start.sh"]
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 500m
              memory: 256Mi
          ports:
            - containerPort: 8080
              name: bot
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 5
          volumeMounts:
          - name: tz-config
            mountPath: /etc/localtime
      volumes:
        - name: tz-config
          hostPath:
            path: /usr/share/zoneinfo/Asia/Vladivostok
      nodeSelector:
        dedicated: ${NODESELECTOR}
