.kube/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: ${CI_PROJECT_NAME}-${CI_COMMIT_REF_SLUG}-svc
  namespace: ${NAMESPACE}
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: ${CI_PROJECT_NAME}-${CI_COMMIT_REF_SLUG}
