.kube/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: ${NAMESPACE}
  annotations:
    nginx.org/proxy-connect-timeout: "1800s"
    nginx.org/proxy-read-timeout: "1800s"
    nginx.org/client-max-body-size: 0
  name: ${CI_PROJECT_NAME}-${CI_COMMIT_REF_SLUG}-ing
spec:
  rules:
    - host: ${CI_COMMIT_REF_SLUG}.${CI_PROJECT_NAME}.kube.local
      http:
        paths:
          - path: /
            backend:
              serviceName: ${CI_PROJECT_NAME}-${CI_COMMIT_REF_SLUG}-svc
              servicePort: http
